# pytrpp2

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
pytr/: account.py  check_mappings_pp.py  classifications_config.example.json  classify_pp.py  conv_pp.py  main.py  trdl_pp.py
tests/: test_account.py  test_check_mappings_pp.py  test_classify_pp.py  test_conv_pp.py  test_trdl_pp.py
