[build-system]
requires = ["hatchling", "hatch-babel"]
build-backend = "hatchling.build"

[project]
name = "pytrpp2"
version = "0.1.2"
description = "Trade Republic data exporter with Portfolio Performance support — fork of pytr"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "JonathanWillnow" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "babel",
    "certifi",
    "coloredlogs",
    "cryptography",
    "curl_cffi",
    "packaging",
    "pathvalidate",
    "playwright",
    "pygments",
    "requests_futures",
    "shtab",
    "websockets>=14",
]

[project.urls]
Homepage = "https://github.com/JonathanWillnow/pytrpp2"
"Bug Tracker" = "https://github.com/JonathanWillnow/pytrpp2/issues"
Changelog = "https://github.com/JonathanWillnow/pytrpp2/releases"

[project.scripts]
pytrpp2 = "pytr.main:main"

[tool.hatch.build.targets.wheel]
packages = ["pytr"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".github/",
    ".vscode/",
    "CLAUDE.md",
]

[tool.hatch.build.hooks.babel]
locale_dir = "pytr/locale"

[dependency-groups]
dev = [
    "ruff>=0.9.4",
    "pytest>=8.3.4",
    "mypy>=1.15.0",
    "types-babel>=2.11.0.15",
    "types-requests>=2.32.0.20241016",
    "types-pygments>=2.19.0.20250107",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.10"
